KAAV-116 Fix visibility day count field styling (#470)

--- a/src/components/projectEdit/ProjectEdit.scss
+++ b/src/components/projectEdit/ProjectEdit.scss
@@ -757,6 +757,14 @@
         margin-bottom: $size16;
       }
 
+      .deadline-info-readonlytext {
+        margin-top: $size16;
+        margin-bottom: $size24;
+        font-size: $size14;
+        font-family: "Helsinki Grotesk Medium", sans-serif;
+        font-weight:500;
+      }
+
       .deadlines-cancel-button{
         margin-left: 0;
       }
